# findmylink

./: .gitignore  Caddyfile  README.md  docker-compose.yaml  privacy.html
api/: Dockerfile  Makefile  README.md  pyproject.toml
api/db_migrations/: env.py
api/db_migrations/versions/: ea1134c4ea31_initial.py
api/src/: app.py
api/src/configs/: alembic.ini  config.py  config.yaml
api/src/models/: models.py
api/src/static/: site.webmanifest
api/src/templates/: auth_page_template.html  index.html
api/src/tests/: test_api_fix.py  test_api_security.py  test_components.py  test_database_fix.py  test_jwt_auth.py  test_promo.py  test_telegram_signature.py
api/src/utils/: auth.py  database.py  decorators.py  jwt_utils.py  promo.py  rate_limit.py  redis_manager.py  subscription.py
bot/: .gitignore  Dockerfile  README.md  pyproject.toml
bot/src/: bot.py
bot/src/configs/: config.py  config.yaml
bot/src/handlers/: handlers.py
bot/src/locales/: en.json  ru.json
bot/src/tests/: test_backup.py  test_new_logic.py
bot/src/utils/: backup.py  subscription.py
chrome-extension/: README.md  install-key.pem  install.pem  manifest.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
chrome-extension/locales/: en.json  ru.json
chrome-extension/public/: auth.html  esc-close.js  index.html  normal_popup.html  redirect-popup.js
chrome-extension/src/: api.ts  auth-page.ts  auth-widget.ts  auth.ts  background.ts  config.ts  constants.ts  i18n.ts  popup.ts  styles.css  types.ts
chrome-extension/src/components/: auth.ts  tabSearch.ts  (+2 more)
(+2 files in other folders)
